# CppCourse

./: .gitignore  README.md
map-reduce/: CMakeLists.txt  README.md  main.cpp
